02-kubernetes/02-distributed/deploymentapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo-web
        image: josegguerrer/todo-app:latest
