02-kubernetes/02-distributed/deploymentfront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
spec:
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
      - name: todo-front
        image: josegguerrer/todo-front:latest
        ports:
        - containerPort: 80
