02-kubernetes/02-distributed/svc-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo
  ports:
  - port: 3000
    targetPort: 3000
