02-kubernetes/02-distributed/svc-bd.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-bd
spec:
  selector:
    app: ss
  ports:
  - port: 5432
    targetPort: 5432
