02-kubernetes/02-distributed/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  selector:
    app: todo-front
  ports:
  - port: 80
    targetPort: 80
