02-kubernetes/02-distributed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: todo.edu
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: todo-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: svc-front
            port: 
              number: 80
